@@ -27,7 +27,8 @@
 #
 
 # Define the ethernet interface on which we will sniff packets.
-# Default if not set is eth0.
+# Default if not set is eth0.  The '-i <intf>' command line option overrides
+# the PCAP_INTF setting.
 #
 #PCAP_INTF                   eth0;
 
@@ -63,13 +64,13 @@
 #
 #ENABLE_DIGEST_PERSISTENCE   Y;
 
-# Sets the number of packets that are processed when the *pcap_dispatch()*
-# call is made.  The default is zero, since this allows *fwknopd* to process
+# Sets the number of packets that are processed when the pcap_dispatch()
+# call is made.  The default is zero, since this allows fwknopd to process
 # as many packets as possible in the corresponding callback where the SPA
 # handling routine is called for packets that pass a set of prerequisite
-# checks.  However, if *fwknopd* is running on a platform with an old
+# checks.  However, if fwknopd is running on a platform with an old
 # version of libpcap, it may be necessary to change this value to a positive
-# non-zero integer.  More information can be found in the *pcap_dispatch(3)*
+# non-zero integer.  More information can be found in the pcap_dispatch(3)
 # man page.
 #PCAP_DISPATCH_COUNT            0;
 
@@ -120,6 +121,12 @@
 #
 #SYSLOG_IDENTITY             fwknopd;
 #SYSLOG_FACILITY             LOG_DAEMON;
+
+# Define this to have fwknopd read pcap data from a file instead of sniffing
+# a live interface.  This is usually only used for debugging purposes, and is
+# equivalent to the '-r <pcap file>' command line option.
+#
+#PCAP_FILE                   /some/path/to/file.pcap;
 
 ##############################################################################
 # NOTE: The following EXTERNAL_CMD functionality is not yet implemented.
