@@ -165,6 +165,7 @@ enum {
     CONF_OVERRIDE_CONFIG,
     //CONF_FIREWALL_TYPE,
     CONF_PCAP_INTF,
+    CONF_PCAP_FILE,
     CONF_ENABLE_PCAP_PROMISC,
     CONF_PCAP_FILTER,
     CONF_PCAP_DISPATCH_COUNT,
